This commit was manufactured by cvs2svn to create tag 'cx10_before_merge'.
git-svn-id: svn://svn.code.sf.net/p/x10/code/tags/cx10_before_merge@2482 a326200e-df2c-42e0-81fa-597e909af41d

--- a/x10.common/etc/x10-cluster.cfg
+++ b/x10.common/etc/x10-cluster.cfg
@@ -1,5 +1,6 @@
-# example place-to-VM mapping configuration file.
+# test
 # format:
 #	vmid, hostname, <set of place>
-1, localhost, 0 1
-2, localhost, 2 3
+#1, taylor.cs.purdue.edu, 0 1 2 3
+1, taylor.cs.purdue.edu, 0 2
+2, taylor.cs.purdue.edu, 1 3
