--- a/x10.compiler/.settings/org.eclipse.jdt.ui.prefs
+++ b/x10.compiler/.settings/org.eclipse.jdt.ui.prefs
@@ -1,3 +1,3 @@
-#Wed Jul 19 14:22:54 EDT 2006
+#Fri Sep 15 09:00:41 EDT 2006
 eclipse.preferences.version=1
-internal.default.compliance=default
+internal.default.compliance=user
