--- a/trunk/lpg/.classpath
+++ b/trunk/lpg/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" sourcepath="/lpg.lpgjavaruntime/src" kind="lib" path="lib/lpg.jar"/>
-	<classpathentry kind="output" path=""/>
+	<classpathentry kind="output" path="classes"/>
 </classpath>
