--- a/trunk/lpg/build.xml
+++ b/trunk/lpg/build.xml
@@ -4,6 +4,8 @@
     &buildfile;
     <property name="x10.home" value=".."/>
     <property name="x10.common.location" value="${x10.home}/x10.common"/>
+    <property name="build" location="${basedir}/classes"/>
+    <property name="src" location="${basedir}/src"/>
     <property name="lib" location="${x10.common.location}/lib"/>
     <property name="jar" value="lpg.jar"/>
     <path id="project.classpath">
@@ -17,12 +19,20 @@
     <target name="dist" depends="jar" description="generate part of the distribution">
         <mkdir dir="${lib}"/>
         <copy todir="${lib}">
-            <fileset dir="${basedir}/lib" includes="${jar}"/>
+            <fileset dir="${build}" includes="${jar}"/>
         </copy>
     </target>
-    <target name="jar" depends="build"/>
+    <target name="jar" depends="build">
+        <jar jarfile="${build}/${jar}">
+            <fileset dir="${build}" includes="lpg/**" excludes="${jar}"/>
+        </jar>
+    </target>
     <target name="build" depends="init">
         <echo message="${ant.project.name}: ${ant.file}"/>
+        <javac destdir="${build}" source="1.4" target="1.4">
+            <src path="${src}"/>
+            <classpath refid="project.classpath"/>
+        </javac>
     </target>
 </project>
 
