Create build directory
git-svn-id: svn://svn.code.sf.net/p/x10/code/trunk@2715 a326200e-df2c-42e0-81fa-597e909af41d

--- a/lpg/build.xml
+++ b/lpg/build.xml
@@ -14,7 +14,9 @@
     <path id="mainproject.classpath">
         <pathelement location="${basedir}/lib/${jar}"/>
     </path>
-    <target name="init"/>
+    <target name="init">
+        <mkdir dir="${build}"/>
+    </target>
     <target name="clean"/>
     <target name="dist" depends="jar" description="generate part of the distribution">
         <mkdir dir="${lib}"/>
