Switch to Java5 build Turn on debugging info in generated classfiles
git-svn-id: svn://svn.code.sf.net/p/x10/code@2801 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.compiler/build.xml
+++ b/trunk/x10.compiler/build.xml
@@ -79,9 +79,9 @@
     </target>
     <target name="build" depends="init,lpg-jar,polyglot-jar,runtime-jar">
         <echo message="${ant.project.name}: ${ant.file}"/>
-        <javac destdir="${build}" source="1.4" target="1.4">
-        <!-- <javac destdir="${build}" source="1.5" target="1.5"> -->
-        <!-- <javac destdir="${build}"> -->
+        <!-- <javac destdir="${build}" source="1.4" target="1.4" debug="on"> -->
+        <javac destdir="${build}" source="1.5" target="1.5" debug="on">
+        <!-- <javac destdir="${build}" debug="on"> -->
             <src path="${src}"/>
             <classpath refid="project.classpath"/>
         </javac>
