make library suffix .so
git-svn-id: svn://svn.code.sf.net/p/x10/code@2823 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.runtime/src/x10/runtime/util/Makefile
+++ b/trunk/x10.runtime/src/x10/runtime/util/Makefile
@@ -4,7 +4,7 @@ CLASSES	= $(X10)/x10.runtime/classes
 LIBDIR = $(X10)/x10.common/lib
 CCC	= xlC_r
 CCC_OPTS= -g -O2 -qnolm -qnoeh -qnotempinc -bM:SHR -bnoentry -bexpall -I$(CLASSES) -I$(JAVA_HOME)/bin/include -I$(JAVA_HOME)/include
-LIB_SUFFIX=a
+LIB_SUFFIX=so
 
 default: $(LIBDIR)/$(X10_PLATFORM)/libX10ThreadSupp.$(LIB_SUFFIX)
 
@@ -13,7 +13,7 @@ $(LIBDIR)/$(X10_PLATFORM)/libX10ThreadSupp.$(LIB_SUFFIX): X10ThreadSupp.cpp ../V
 	$(CCC) $(CCC_OPTS) -o $@ X10ThreadSupp.cpp
 
 clobber: clean
-	rm $(LIBDIR)/$(X10_PLATFORM)/libX10ThreadSupp.$(LIB_SUFFIX)
+	rm -f $(LIBDIR)/$(X10_PLATFORM)/libX10ThreadSupp.$(LIB_SUFFIX)
 
 clean:
-	rm x10_runtime_VMInterface.h
+	rm -f x10_runtime_VMInterface.h
