--- a/x10.compiler/.settings/org.eclipse.jdt.ui.prefs
+++ b/x10.compiler/.settings/org.eclipse.jdt.ui.prefs
@@ -1,3 +1,3 @@
-#Fri Sep 15 09:00:41 EDT 2006
+#Thu Nov 09 22:16:45 EST 2006
 eclipse.preferences.version=1
-internal.default.compliance=user
+internal.default.compliance=default
