--- a/trunk/com.ibm.wala.cast.x10/.classpath
+++ b/trunk/com.ibm.wala.cast.x10/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry exported="true" kind="lib" path="lib/x10.compiler_1.0.19.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
