--- a/trunk/x10.compiler/build.xml
+++ b/trunk/x10.compiler/build.xml
@@ -35,9 +35,15 @@
     <path id="x10.runtime.classpath">
         <pathelement location="${lib}/${runtime.jar}"/>
     </path>
+    <!-- vj: get the environment variables. -->
+    <!-- vj: This works on Windows/cygwin. -->
+    <property environment="env"/>
     <target name="init">
         <tstamp/>
         <mkdir dir="${build}"/>
+        <condition property="local.polyglot.jar" value="${env.LOCAL_POLYGLOT_JAR}">
+            <isset property="env.LOCAL_POLYGLOT_JAR"/>
+        </condition>
     </target>
     <target name="cleanall" depends="clean">
         <ant antfile="${x10.runtime.location}/build.xml" target="clean" inheritAll="false" dir="${x10.runtime.location}"/>
@@ -68,7 +74,7 @@
     <target name="lpg-jar" depends="init">
         <ant antfile="${lpg.location}/build.xml" target="dist" inheritAll="false" dir="${lpg.location}"/>
     </target>
-    <target name="polyglot-jar" depends="init">
+    <target name="polyglot-jar" depends="init,polyglot-local-jar" unless="local.polyglot.jar">
         <!-- TODO: move this into x10.common -->
         <property name="polyglot.url" value="http://www.cs.cornell.edu/Projects/polyglot/eclipseUpdates/plugins"/>
         <!--<property name="polyglot.jar.url" value="${polyglot.url}/polyglot2_2.0.1.jar"/>-->
@@ -77,6 +83,12 @@
         <get usetimestamp="true" ignoreerrors="true" src="${polyglot.jar.url}" dest="${lib}/${polyglot.jar}"/>
         <available property="polyglot.jar.present" file="${lib}/${polyglot.jar}"/>
         <fail message="Unable to get ${polyglot.jar}" unless="polyglot.jar.present"/>
+    </target>
+    <target name="polyglot-local-jar" depends="init" if="local.polyglot.jar">
+        <!-- TODO: move this into x10.common -->
+        <copy file="${local.polyglot.jar}" tofile="${lib}/${polyglot.jar}"/>
+        <available property="polyglot.jar.present" file="${lib}/${polyglot.jar}"/>
+        <fail message="Unable to find ${polyglot.jar}" unless="polyglot.jar.present"/>
     </target>
     <target name="runtime-jar" depends="init">
         <ant antfile="${x10.runtime.location}/build.xml" target="dist" inheritAll="false" dir="${x10.runtime.location}"/>
