--- a/trunk/x10.common/bin/x10c.in
+++ b/trunk/x10.common/bin/x10c.in
@@ -100,7 +100,7 @@ extargs="$extargs -noserial"
 
 classpath=""
 [ -n "$dev" ] && classpath="${TOP}${FILE_SEP}..${FILE_SEP}x10.compiler${FILE_SEP}classes${PATH_SEP}${TOP}${FILE_SEP}..${FILE_SEP}x10.runtime${FILE_SEP}classes${PATH_SEP}${TOP}${FILE_SEP}..${FILE_SEP}polyglot2${FILE_SEP}bin${PATH_SEP}${TOP}${FILE_SEP}classes${PATH_SEP}"
-classpath="${classpath}${LIB_DIR}${FILE_SEP}x10c.jar${PATH_SEP}${LIB_DIR}${FILE_SEP}x10.jar${PATH_SEP}${LIB_DIR}${FILE_SEP}polyglot2.jar${PATH_SEP}${LIB_DIR}${FILE_SEP}lpg.jar${ext_cp}${extra_cp}"
+classpath="${classpath}${LIB_DIR}${FILE_SEP}x10c.jar${PATH_SEP}${LIB_DIR}${FILE_SEP}x10.jar${PATH_SEP}${LIB_DIR}${FILE_SEP}polyglot.jar${PATH_SEP}${LIB_DIR}${FILE_SEP}lpgjavaruntime.jar${ext_cp}${extra_cp}"
 
 command="\"$JAVA\" -Xmx128m $config $profile -classpath \"$classpath\" ${java_args} polyglot.main.Main $extargs $args"
 
