--- a/trunk/x10.common/bin/x10.in
+++ b/trunk/x10.common/bin/x10.in
@@ -5,8 +5,10 @@ PATH_SEP=':'; if [[ "$UNAME" = CYGWIN* ]]; then PATH_SEP=';'; fi
 case "$UNAME" in
   CYGWIN*) X10_PLATFORM='win32_x86';;
   Linux) X10_PLATFORM='linux_x86';;
+  AIX) X10_PLATFORM='aix_ppc';;
   *) echo "Unrecognized platform: '$UNAME'"; exit 1;;
 esac
+# FIXME: the above assumes that Cygwin==win32 and Linux==x86 and AIX==ppc
 
 TOP="$(cd "$(dirname $0)/.." && pwd)"
 if [[ "$UNAME" = CYGWIN* ]]; then TOP="$(cygpath -aw "$TOP")"; fi
@@ -34,7 +36,12 @@ while [ -n "$1" ]; do
         -v|-verbose|--verbose) verbose="1";;
         -t|-time) time="time ";;
         -mx) shift; mx="$1";;
-        -D*) defs="${defs} $1";;
+        -D*) if [[ "${1##-D}" = java.library.path=* ]]; then
+                 echo >&2 "Error: Cannot reset java.library.path, use -libpath instead"
+                 exit 1
+             fi
+             # TODO: add tests for more system properties above
+             defs="${defs} $1";;
         -classpath|-cp) shift; extra_cp="$1";;
         -libpath) shift; extra_lib="$1";;
         -config) shift; config="$1.cfg";;
@@ -54,11 +61,12 @@ where [options] includes:
     -v -verbose --verbose    print verbose debugging information
     -h -help --help          print this message
     -mx <size>               set max heap size, e.g., -mx 200M
+    -D<name>=<value>         set system property <name> to <value>
     -classpath <path>        search path for class files
     -libpath <path>          search path for native libraries
     -config <conf>           read configuration <conf> from etc${FILE_SEP}<conf>.cfg
     -dev                     developer mode (use unpackaged X10 libraries)
-    -J<arg>                  pass <arg> to java.
+    -J<arg>                  [USE WITH CAUTION] pass <arg> directly to java.
         e.g., use -J-verbose to make java execution verbose.
 
     Use "x10 -- -help" to get help on X10 runtime configuration options
