Removed unnecessary (and incorrect) "shift" from processing for -dev option.
git-svn-id: svn://svn.code.sf.net/p/x10/code@3613 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.common/bin/x10.in
+++ b/trunk/x10.common/bin/x10.in
@@ -45,7 +45,7 @@ while [ -n "$1" ]; do
         -classpath|-cp) shift; extra_cp="$1";;
         -libpath) shift; extra_lib="$1";;
         -config) shift; config="$1.cfg";;
-        -dev) shift; dev="true";;
+        -dev) dev="true";;
         -J*) java_args="${java_args} '${1##-J}'";;
         --) parse=;;
         *) args="$args '$1'";;
