Copied AIX platform detection from x10.in to x10c.in
git-svn-id: svn://svn.code.sf.net/p/x10/code@3614 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.common/bin/x10c.in
+++ b/trunk/x10.common/bin/x10c.in
@@ -5,6 +5,7 @@ PATH_SEP=':'; if [[ "$UNAME" = CYGWIN* ]]; then PATH_SEP=';'; fi
 case "$UNAME" in
   CYGWIN*) X10_PLATFORM='win32_x86';;
   Linux) X10_PLATFORM='linux_x86';;
+  AIX) X10_PLATFORM='aix_ppc';;
   *) echo "Unrecognized platform: '$UNAME'"; exit 1;;
 esac
 
