MinGW gcc does not understand /dev/null
git-svn-id: svn://svn.code.sf.net/p/x10/code@3616 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.common/examples/Constructs/Extern/Makefile
+++ b/trunk/x10.common/examples/Constructs/Extern/Makefile
@@ -68,7 +68,8 @@ $(LIBPFX)%.$(LIBEXT):	checkjava dll_entry.o
 
 ifneq ($(__DEPS__),)
 %.din:	dll_entry.o $(__DEPS__)
-	$(CXX) $(CFLAGS) -shared $(LDFLAGS) -o /dev/null -Wl,--output-def=$@ $(filter %.o,$^)
+	$(CXX) $(CFLAGS) -shared $(LDFLAGS) -o $*.tmp.dll -Wl,--output-def=$@ $(filter %.o,$^)
+	$(RM) $*.tmp.dll
 
 %.def:	%.din
 	@#sed -e '/Java_/ {; h; s/Java_/_Java_/; G; s/ @[0-9]\+\n */ = /; s/ @[0-9]\+$$//; H; s/00024//; x; G }' < $< > $@
