used ar and ranlib in Makefile
git-svn-id: svn://svn.code.sf.net/p/x10/code@3646 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10libnew/src/Makefile
+++ b/trunk/x10libnew/src/Makefile
@@ -2,8 +2,8 @@
 CCC = g++
 CCFLAGS = -c -O3 $(INCLUDE) 
 LIB = libx10.a
-TAR = tar
-TAR_COMMAND = cvf
+TAR = ar
+TAR_COMMAND = q
 	
 .SUFFIXES: *.o *.cpp *.h
 
