more changes -- added more .cpp files, fixed Makefile etc.
git-svn-id: svn://svn.code.sf.net/p/x10/code@3648 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10libnew/src/Makefile
+++ b/trunk/x10libnew/src/Makefile
@@ -7,10 +7,14 @@ TAR_COMMAND = q
 	
 .SUFFIXES: *.o *.cpp *.h
 
-.cpp.o: *.h
+OBJS = 	x10-array.o\
+	x10-clock.o\
+	x10-region.o
+	
+.cpp.o: *.h *.cpp
 	$(CCC) $(CCFLAGS) $< 
 
-$(LIB):   *.o
+$(LIB):  $(OBJS) 
 	$(TAR) $(TAR_COMMAND) $(LIB) $<
 
 all:	$(LIB)
