comment out the rules for test
git-svn-id: svn://svn.code.sf.net/p/x10/code@4243 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.apps/FT/x10/Makefile
+++ b/trunk/x10.apps/FT/x10/Makefile
@@ -29,7 +29,7 @@ endif
 endif
 
 all:	$(LIBPFX)ft.$(LIBEXT) \
-	$(LIBPFX)test.$(LIBEXT)
+#	$(LIBPFX)test.$(LIBEXT)
 #	$(LIBPFX)ftTest.$(LIBEXT)
 	
 ifeq ($(shell gcc --version),)	# Test for systems without GCC
@@ -107,8 +107,8 @@ $(LIBPFX)ft.$(LIBEXT):	 c_randdp.o fft_fftw3.o Ft.o  \
 #$(LIBPFX)ftTest.$(LIBEXT):	xsupport1d.o \
 #	ftTest_x10stub.c
 
-$(LIBPFX)test.$(LIBEXT):	Test.o \
-	Test_x10stub.c
+#$(LIBPFX)test.$(LIBEXT):	Test.o \
+#	Test_x10stub.c
 
 .PHONY:	checkjava
 checkjava:
