another optimized version of routing that works ONLY for RandomAccess.
git-svn-id: svn://svn.code.sf.net/p/x10/code@4395 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.lib/src/Makefile
+++ b/trunk/x10.lib/src/Makefile
@@ -1,7 +1,7 @@
 #
 # (c) Copyright IBM Corporation 2007
 #
-# $Id: Makefile,v 1.39 2007-08-24 12:54:58 ganeshvb Exp $
+# $Id: Makefile,v 1.40 2007-09-03 14:40:41 ganeshvb Exp $
 # This file is part of X10 Runtime System.
 #
 
@@ -39,17 +39,17 @@ ARRAY_A = $(SUBDIR1)/array.a
 #HEADERS = types.h x10lib.h gas.h alloc.h  async.h aggregate.h finish.h standalone.h
 
 SRCS = aggregate.cc aggregate_hc.cc async.cc env.cc err.cc finish.cc gas.cc lock.cc \
-		order.cc progress.cc \
+		order.cc progress.cc aggregate_ra.cc \
 		register.cc rmc.cc switch.cc x10lib.cc asyncSwitch.cc \
 		utility.cc misc.cc clock.cc 
 OBJS = aggregate.o async.o env.o err.o finish.o gas.o lock.o \
-		order.o progress.o \
+		order.o progress.o aggregate_ra.o\
 		register.o rmc.o switch.o x10lib.o asyncSwitch.o \
 		utility.o misc.o clock.o aggregate_hc.o
 HEADERS = env.h err.h gas.h lock.h order.h progress.h \
 		register.h rmc.h switch.h types.h x10lib.h xassert.h \
 		xmacros.h aggregate.h async.h finish.h utility.h misc.h \
-                clock.h 
+                clock.h  
 all: $(LIBTARGET) 
 
 #$(LIBTARGET): $(OBJS) #$(SCHED_A)
